include resume url

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -6,6 +6,7 @@ en:
   telephone: "Telephone"
   email: "E-mail"
   url: "Site"
+  resume: "Online resume"
   about:
     title: "About"
   experience:
