dates experience fix

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -11,7 +11,9 @@ en:
     title: "About"
   experience:
     title: "Job experience"
-    dates: "Dates"
+    dates:
+      title: "Dates"
+      to: "to"
     employer: "Employer"
     ocuppation: "Ocuppation"
     activities: "Activities"
